# Rkernel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_grpc.bat  build_grpc.sh  build_rwrapper.bat  build_rwrapper.sh  clone_dependency.bat  clone_dependency.sh  dll2lib.R  env.sh  env_os.sh  generate_library_to_link.sh  get_fsnotifier.sh  unpack-R-pkg.sh
R/: GetEnvVars.R  GetVersion.R  SourceWithProgress.template.R  dotsNamedArguments.R  empty.R  extraNamedArguments.R  extract_symbol.R  init.R  interop.R  package_summary.R  ram_size.R  render_markdown.R
R/RSession/: Api.R  Options.R  Tools.R
R/RSession/modules/: NotebookData.R  NotebookHtmlWidgets.R  SessionBreakpoints.R  SessionBuild.R  SessionCodeTools.R  SessionConnections.R  SessionDataImportV2.R  SessionDataViewer.R  SessionJobs.R  SessionProfiler.R  SourceWithProgress.R
R/interpreter/: available_packages.R  cran_mirrors.R  default_repositories.R  get_env.R  installed_packages.R  library_paths.R
R/projectGenerator/: createDefault.R  createDevtools.R  createPackrat.R  createRcpp.R  getAllInstalledPackages.R  getPackratOptions.R  quickInstallPackage.R
R/repos/: local_cran_mirrors.txt
Rcpp-patches/: 0001-add-vcs-support.patch
crashpad/: install-crashpad.sh
license/: preambule-gpl-3.0  preambule-gpl-3.0-R
scripts/: update_preambule.sh  update_preambule_R.sh
src/: CppExports.cpp  CppExports.h  CrashReport.cpp  CrashReport.h  CrashpadHandler.cpp  DataFrame.cpp  DataFrame.h  EventLoop.cpp  EventLoop.h  EventLoopUnix.cpp  EventLoopWin.cpp  ExecuteCode.cpp  HTMLViewer.cpp  HTMLViewer.h  IO.cpp  IO.h  Init.cpp  Init.h  Options.cpp  Options.h  RDebugger.cpp  RLoader.cpp  RLoader.h  RObjects.h  RPIServiceImpl.cpp  RPIServiceImpl.h  RPIServiceMethods.cpp  RRefs.cpp  RStudioApi.cpp  RStudioApi.h  RcppExports.cpp  RcppExports.h  Repl.cpp  Session.cpp  Session.h  Subprocess.cpp  Subprocess.h  SubprocessUnix.cpp  SubprocessWin.cpp  Timer.cpp  (+4 more)
src/RInternals/: InternalContext.h  InternalFunTab.h  InternalSEXPREC.h  MatchArgs.cpp  RInternals.cpp  RInternals.h
src/RStuff/: Conversion.cpp  Conversion.h  Exceptions.h  Export.h  MySEXP.cpp  MySEXP.h  RInclude.h  RInterrupt.cpp  RInterrupt.h  RObjects.h  RUtil.h
src/base64/: base64.cpp  base64.h  base64r.cpp
src/debugger/: DebugStepInfo.h  DebuggerMethods.cpp  RDebugger.cpp  RDebugger.h  SourceFileManager.cpp  SourceFileManager.h  TextBuilder.cpp  TextBuilder.h
src/graphics/: AffineCoordinate.h  AffinePoint.h  Arithmetic.h  Color.h  Common.h  DeviceManager.cpp  DeviceManager.h  DeviceSlotLock.cpp  DeviceSlotLock.h  Evaluator.cpp  Evaluator.h  Font.h  FontUtil.cpp  FontUtil.h  InitHelper.cpp  InitHelper.h  Interface.cpp  Layer.h  MasterDevice.cpp  MasterDevice.h  Plot.h  PlotUtil.cpp  PlotUtil.h  Point.h  Polyline.h  Ptr.h  REagerGraphicsDevice.cpp  REagerGraphicsDevice.h  RVersionHelper.h  RasterImage.h  Rectangle.h  ScopeProtector.cpp  ScopeProtector.h  ScreenParameters.h  SlaveDevice.cpp  SlaveDevice.h  SnapshotType.h  SnapshotUtil.cpp  SnapshotUtil.h  Stroke.h  (+1 more)
src/graphics/actions/: Action.h  ActionKind.h  CircleAction.h  ClipAction.h  LineAction.h  NewPageAction.h  PathAction.h  PolygonAction.h  PolylineAction.h  RasterAction.h  RectangleAction.h  TextAction.h
src/graphics/devices/: Point.h  REagerGraphicsDevice.cpp  REagerGraphicsDevice.h  RGraphicsDevice.h  RLazyGraphicsDevice.cpp  RLazyGraphicsDevice.h  Rectangle.h
src/graphics/devices/actions/: RCircleAction.cpp  RCircleAction.h  RClipAction.cpp  RClipAction.h  RGraphicsAction.h  RLineAction.cpp  RLineAction.h  RModeAction.cpp  RModeAction.h  RNewPageAction.cpp  RNewPageAction.h  RPathAction.cpp  RPathAction.h  RPolygonAction.cpp  RPolygonAction.h  RPolylineAction.cpp  RPolylineAction.h  RRasterAction.cpp  RRasterAction.h  RRectAction.cpp  RRectAction.h  RTextAction.cpp  RTextAction.h  RTextAsciiAction.cpp  RTextAsciiAction.h  RTextUtf8Action.cpp  RTextUtf8Action.h
src/graphics/devices/actions/util/: RescaleUtil.cpp  RescaleUtil.h
src/graphics/figures/: CircleFigure.h  Figure.h  FigureKind.h  LineFigure.h  PathFigure.h  PolygonFigure.h  PolylineFigure.h  RasterFigure.h  RectangleFigure.h  TextFigure.h
src/graphics/viewports/: FixedViewport.h  FreeViewport.h  Viewport.h
src/util/: BlockingQueue.h  ContainerUtil.h  FileUtil.h  Finally.h  IndexedStorage.h  RUtil.cpp  RUtil.h  ScopedAssign.h  StringUtil.h  memfd_create_syscall.c
vcpkg-patches/: nasm.diff
